[gd_scene load_steps=4 format=3 uid="uid://ca6sxv2ecmfue"]

[ext_resource type="Script" path="res://examples/07-slot-node/slot-node.gd" id="1"]
[ext_resource type="SpineSkeletonDataResource" path="res://assets/spineboy/spinebody-data-res.tres" id="2"]
[ext_resource type="SpineSkeletonDataResource" path="res://assets/raptor/raprot-data.tres" id="3"]

[node name="Node2D" type="Node2D"]
script = ExtResource( "1" )

[node name="Spineboy" type="SpineSprite" parent="."]
position = Vector2(506, 480)
scale = Vector2(0.560712, 0.560712)
skeleton_data_res = ExtResource( "2" )

[node name="SlotNodeGun" type="SpineSlotNode" parent="Spineboy"]
position = Vector2(40.8752, -276.036)
rotation = 0.837234
scale = Vector2(1, 1)
slot_name = "gun"

[node name="Raptor" type="SpineSprite" parent="Spineboy/SlotNodeGun"]
position = Vector2(84.6909, -67.9174)
scale = Vector2(0.193472, 0.193472)
skeleton_data_res = ExtResource( "3" )

[node name="SlotNodeFrontFist" type="SpineSlotNode" parent="Spineboy"]
position = Vector2(-29.0298, -241.577)
rotation = 0.995187
scale = Vector2(1, 1)
slot_name = "front-fist"

[node name="TinySpineboy" type="SpineSprite" parent="Spineboy/SlotNodeFrontFist"]
position = Vector2(-2.64624, -10.8111)
scale = Vector2(0.193389, 0.193389)
skeleton_data_res = ExtResource( "2" )
